update directions link

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
       <div class="column col-xs-12 col-md-12 col-6 col-mx-auto" id="map-info">
         <div>
           <h3>Ragged Mountain Resort Location</h3>
-          <p><span class="text-bold text-large">Address:</span> 620 Ragged Mountain Road Danbury, NH 03230</p>
+          <p><span class="text-bold text-large">Address:</span> <a href="https://www.google.com/maps/dir//Ragged+Mountain+Resort,+620+Ragged+Mountain+Rd,+Danbury,+NH+03230-4235,+USA" target="_blank">620 Ragged Mountain Road Danbury, NH 03230</a></p>
 
           <p>Ragged Mountain Resort is conveniently located in the town of Danbury, NH. Just a short drive from Boston, Manchester, or parts north, getting here is quick and easy!</p>
           <ul>
