--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Ragged Mountain Resort</title>
   <meta name="author" content="Connor Tangney">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, user-scalable=no">
-  <meta name="description" content="Interactive views of consolidated TSA claim data from year 2010 through year 2013">
+  <meta name="description" content="With New Hampshire's only high-speed six passenger chairlift, 57 trails including: 17 glades, 3 terrain parks, and miles of groomers, Ragged has something to offer everyone. We are located in Danbury, New Hampshire, just under ninety minutes from Boston, so be sure to join us and Get Ragged!">
   <meta name="keywords" content="List, Of, Keywords, Here">
 
   <!-- js pre-load -->
